fixed word spacing

--- a/source/resources/css/style.css
+++ b/source/resources/css/style.css
@@ -13,6 +13,7 @@ body {
   margin: 0;
   padding: 0;
   min-width: 320px;
+  word-spacing: 0.2em;
 }
 
 .quran-page {
